[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thor-gamepad-bridge"
version = "0.1.0"
description = "Bridge Android gamepad input to a Linux virtual device via ADB"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "evdev>=1.6.0",
]
authors = [
    {name = "Brett Kosinski"},
]
keywords = ["android", "gamepad", "adb", "evdev", "bridge"]

[project.scripts]
thor-gamepad-bridge = "thor_gamepad_bridge:main"
